# cosmian_ai_backend

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
app/: README.md  pyproject.toml  requirements.cpu.txt  requirements.gpu.txt  requirements.metal.txt  requirements.txt
app/client/: bench.py  client.py  translate.py
app/client/data/: doc.txt
app/src/: app.py  auth.py  main.py  model_pipeline.py  summarizer.py  translator.py
app/src/cosmian_ai_runner/: __init__.py  app.py  auth.py  config.py  detect.py  epub_loader.py  keyword_extractor.py  llm_chain.py  main.py  model_pipeline.py  rag.py  summarizer.py  translator.py  utils.py  vector_db.py
app/src/cosmian_ai_runner/data/: .gitignore  Victor_Hugo_Les_Miserables_Fantine_1_of_5_en.epub  Victor_Hugo_Notre-Dame_De_Paris_en.epub  Victor_Hugo_Ruy_Blas_fr.epub
app/src/cosmian_ai_runner/faiss_index/: index.faiss  index.pkl
app/test/: config.json  test.py
app/tests/: test.py
client/: README.md  summarize.py  translate.py
docker-image/: Dockerfile  README.md  requirements.txt
docker-image/client/: bench.py  client.py  summarize.py  translate.py
docker-image/src/: app.py  auth.py  config.py  summarizer.py  translator.py
docker-image/test/: test.py
mse-app/: Dockerfile  README.md  mse.toml  requirements.txt  secrets.json
mse-app/client/: client.py
mse-app/mse_src/: app.py  requirements.txt
mse-app/mse_src/t5-base-model/: config.json
prod/: config.env  config.json  docker-compose.yml  run.sh
run/: config.json  cosmian_ai_backend.conf  cosmian_ai_backend.service  cosmian_confidential_ai.conf  run.sh
scripts/: README.md  bench_api.py  bench_inference.py
scripts/client/: README.md  bench_api.py  keywords.py  summarize.py  translate.py
scripts/sample_data/: sample_fr_doc.txt
staging/: config.env  config.json  cosmian_confidential_ai.conf  docker-compose.yml  run.sh
