[build-system]
requires = ["setuptools>=69.0.0,<70.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "cosmian-ai-runner"
authors = [
    { name = "Cosmian Tech", email = "tech@cosmian.com" },
]
description = "Cosmian Confidential AI API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython"
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "cosmian_ai_runner.__version__" }
dependencies = { file = "requirements.txt" }

[project.scripts]
cosmian_ai_runner = "cosmian_ai_runner.main:main"
